# gom

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml  update-gom.yml
docs/: index.html
